--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "Cross the bricks",
+  "name": "Cross-the-bricks",
   "version": "1.0.0",
   "description": "Frogger like HTML5 Game",
   "author": "Forrest",
+  "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/forrestw92/Cross-the-bricks.git"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
     "browser-sync": "^2.24.4",
     "browserify": "^16.2.2",
